--- a/src/components/staff/addstaf.module.scss
+++ b/src/components/staff/addstaf.module.scss
@@ -36,3 +36,11 @@
  
     
 }
+.selectcss{
+    width: 349px;
+     height: 39px;
+     border-color: #ced4da;
+     border-radius: 5px;
+     margin-top: 1px;
+     outline: none;
+ }
