--- a/src/App.scss
+++ b/src/App.scss
@@ -45,8 +45,8 @@ div{
 body {
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('./background.jpg');
-  background-color: rgba(0, 0, 0, 0.5);
+
+  background-color: black;
 
 }
 body::after{
