--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -9,17 +9,33 @@
 }
 .formContainer{
     position: relative;
-    height: 500px;
-    width: 400px;
+    height: auto;
+    width: 600px;
     background-color: white;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     input{
         margin: 30px 0px;
     }
-    button{
-        width: 100%;
+    form{
+  
+        display: flex;
+        flex-wrap: wrap;
+        width: 600px;
+        align-items: center;
+        justify-content: center;
+        input{
+            width: 400px;
+            margin: 10px;
+        }
+        button{
+            width: 270px;
+        }
     }
 }
 .header{
@@ -31,18 +47,9 @@
 
     }
 }
-.selectContainer {
-        z-index: 99999999999999999999;
-        font-size: 1.1rem;
-        height: 45px;
-        position: relative; 
-    
-}
-.selectcss{
-   width: 349px;
-    height: 39px;
-    border-color: #ced4da;
+textarea{
+    border: 1px solid #ced4da;
     border-radius: 5px;
-    margin-top: 1px;
-    outline: none;
+    padding: 15px;
+    width: 400px;
 }
