--- a/src/components/sideNav.css
+++ b/src/components/sideNav.css
@@ -2,7 +2,7 @@
     background-color: transparent;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: left;
 }
 
@@ -31,7 +31,7 @@
 
 .nav-text {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding: 8px 0px 8px 16px;
     list-style: none;
@@ -68,7 +68,7 @@ svg{
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 
