--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -27,4 +27,12 @@
     height: 80px;
 }
 
+.left{
+    position: relative;
+    width: 50%;
+}
+.right{
+    position: relative;
 
+    width: 50%;
+}
