--- a/src/components/onePlante/onePlante.module.scss
+++ b/src/components/onePlante/onePlante.module.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     padding: 15px;
-    width: 50%;
+    width: 100%;
     &::after{
         content: "";
         width: 80%;
@@ -17,6 +17,7 @@
     img{
         height: auto;
         max-width: 300px;
+        width: 300px;
     }
 
 }
@@ -25,6 +26,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    word-break: break-all;
+
     h1{
         align-self: flex-start;
     }
