--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -53,3 +53,11 @@ textarea{
     padding: 15px;
     width: 400px;
 }
+.selectcss{
+    width: 400px;
+     height: 39px;
+     border-color: #ced4da;
+     border-radius: 5px;
+     margin-top: 1px;
+     outline: none;
+ }
