--- a/src/components/user/listeuser.module.scss
+++ b/src/components/user/listeuser.module.scss
@@ -6,3 +6,11 @@
     margin-top: 50px;
     margin-bottom: 20px;
 }
+.selectcss{
+    width: 349px;
+     height: 39px;
+     border-color: #ced4da;
+     border-radius: 5px;
+     margin-top: 1px;
+     outline: none;
+ }
